tree-sitter-projects/test/corpus/project_structure.txt
===============
Happy Path Test
===============
#v Test Root Project 
++ Test Root Comment 1
##v Test Child Project
+++ Test Child Comment
###v Test Grandchild Project
++++ Test Grandchild Comment
####v Test Great Grandchild Project
+++++ Test Great Grandchild Comment
#####v Test Leaf Project
++++++ Test Leaf Comment
++ Extra Root Comment
#v Test Root Project 2
++ Test Root Project 2 Comment
##> Test Sub Collapsed Project
#> Test Collapsed Project
# Test No Child Project

---
(source_file
  (root_project
    (text)
    (project_children
      (root_comment
        (text)))
    (project_children
      (child_project
        (text)
        (project_grandchildren
          (child_comment
            (text)))
        (project_grandchildren
          (grandchild_project
            (text)
            (project_great_grandchildren
              (grandchild_comment
                (text)))
            (project_great_grandchildren
              (great_grandchild_project
                (text)
                (leaf_children
                  (great_grandchild_comment
                    (text)))
                (leaf_children
                  (leaf_project
                    (text)
                    (leaf_comment
                      (text))))))))))
        (project_children
          (root_comment
            (text))))
  (root_project
    (text)
    (project_children
      (root_comment
        (text)))
    (project_children
      (child_project
        (collapsed_icon
          (collapsed))
        (text))))
  (root_project
    (collapsed_icon
      (collapsed))
    (text))
  (root_project
    (collapsed_icon
      (no_children))
    (text)))
